--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,9 @@
 .App {
-  text-align: center;
+    height: 100%;
 }
 
-.App-logo {
-  height: 80px;
-}
-
-.App-header {
-  background-color: #f8f8f8;
-  height: 150px;
-  padding: 20px;
-  color: #3d464d;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-code {
-  color: #e73a37;
+.Main {
+    width: 100%;
+    min-height: 100%;
+    position: relative;
 }
