--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,50 @@
     box-shadow: inset 0 0 24em 4em rgba(0,0,0,0.9);
 }
 
-.Logo {
-    width: 4em;
+.Main-inner {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: 1em;
-    left: 1em;
+    display: flex;
+    top: 0;
+    left: 0;
+}
+
+@keyframes FormEnter {
+  0% { transform: translateY(12em); opacity: 0; }
+  75% { transform: translateY(-2em); opacity: 1; }
+  100% { transform: translateY(0); opacity: 1; }
+}
+
+.Form {
+    z-index: 5;
+    width: 90%;
+    max-width: 480px;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    background: #FFF;
+    box-shadow: rgba(27,6,13,0.4) 0px 8px 40px;
+    box-sizing: border-box;
+    padding: 1.5em;
+    position: relative;
+    border-radius: 1px;
+    animation: FormEnter 0.6s forwards;
+}
+
+.Logo {
+    width: 25%;
+    max-width: 32em;
+    min-width: 320px;
+    position: absolute;
+    top: 2em;
+    left: 2em;
+}
+
+
+@media screen and (min-width: 1200px) {
+    .Main-inner {
+        width: 50%;
+        left: 50%;
+    }
 }
