--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -1,11 +1,13 @@
 .Title {
-    color: #FFF;
+    text-align: center;
+    color: #565656;
+    margin-bottom: 0.5em;
 }
 .Title h1 {
-    font-size: 4em;
+    font-size: 2em;
     font-weight: 600;
 }
 .Title h2 {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 100;
 }
