--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
     /* System Fonts as used by GitHub */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 100%;
-    background: #e73359;
+    background: #FFF;
 }
 h1, h2, h3, h4, p, blockquote, figure, ol, ul {
     margin: 0;
