--- a/src/index.css
+++ b/src/index.css
@@ -137,3 +137,136 @@ img {
     max-width: 720px;
     margin: 0 auto;
 }
+
+
+.footer {
+    width: 100%;
+    padding: 2em 1em;
+    color: #FFF;
+    background: #090909;
+    box-sizing: border-box;
+}
+
+.footer-inner {
+    width: 90%;
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer_left, .footer_right {
+    width: 100%;
+}
+
+.footer .disclaimer {
+    font-size: 0.85em;
+    font-weight: 200;
+}
+.VizmondLogo {
+    display: block;
+    width: 70%;
+    margin: 0 auto 1em;
+    max-width: 12em;
+}
+.VizmondSVG {
+    fill: #FFF;
+}
+.footer_left-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0 0 1em 0;
+    flex-wrap: wrap;
+}
+.footer_left-link, .footer_left-link-mo {
+    font-size: 1.1em;
+}
+.footer_left-link {
+    display: none;
+}
+.footer_left-link-mo {
+    display: inline-block;
+    margin: 0 1em;
+}
+
+.mobileadbanner {
+    margin: 2em auto 0;
+    text-align: center;
+}
+
+.mobileadbannerdesk {
+    display: none;
+}
+
+.promoter, .leyend {
+    text-align: center;
+    padding: 0 0 1em 0;
+    font-size: 0.9em;
+    line-height: 1.3
+}
+
+
+@media screen and (max-width: 540px) {
+    .HowItWorks-inner {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .footer-inner {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .footer_left {
+        width: 25%;
+    }
+    .footer_right {
+        width: 70%;
+    }
+    .footer_left-links {
+        display: block;
+    }
+    .footer_left-link, .footer_left-link-mo {
+        display: block;
+        padding: 0 0 1em 0;
+        margin: 0;
+    }
+    .VizmondLogo {
+        width: 70%;
+        margin: 0 0 1em;
+    }
+    .mobileadbanner {
+        display: none;
+    }
+    .mobileadbannerdesk {
+        display: block;
+        margin: 2em auto 0;
+        text-align: center;
+    }
+    .promoter, .leyend {
+        text-align: left;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    body {
+        font-size: 150%;
+    }
+    .footer-inner {
+        max-width: 1200px;
+        font-size: 0.75em;
+    }
+}
+
+@media screen and (min-width: 2000px) {
+    body {
+        font-size: 200%;
+    }
+    .footer-inner {
+        max-width: 1600px;
+    }
+}
